--- a/ByteBank.Portal/ByteBank.Portal.csproj
+++ b/ByteBank.Portal/ByteBank.Portal.csproj
@@ -25,4 +25,8 @@
     <EmbeddedResource Include="View\Home\Index.html" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ByteBank.Service\ByteBank.Service.csproj" />
+  </ItemGroup>
+
 </Project>
